@@ -1,6 +1,9 @@
 v3.6.11 (XXXX-XX-XX)
 --------------------
 
+* Fix some issues with key generators not properly taking into account the
+  `allowUserKeys` attribute when in a cluster.
+
 * Fix a bug in the agency Supervision which could lead to removeFollower jobs
   constantly being created and immediately stopped again.
 
